feat: add deliverable and supervisor CRUD, refactor task management